Update Calculator app 1

--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
     
     <meta name="calc ya later" content="width=device-width">
     <title>CALC YA LATER</title>
-    <link href="./CALC YA LATER_files/style.css" rel="stylesheet" type="text/css">
+    <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <style type="text/css">
 @font-face {
   font-weight: 400;
@@ -38,6 +38,10 @@
   src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWeb-Black.woff2') format('woff2');
 }</style></head>
     <body cz-shortcut-listen="true">
+      <div>
+        <h1>Manuel Castro</h1>
+        <h2>Z-23631723</h2>
+      </div>
         <main id="calc">
             <div id="container">
                 <div id="display">0</div>
@@ -62,6 +66,6 @@
                 <button type="button" class="equals" value="=" data-key="69">=</button>
             </div>  
         </main>
-    <script src="./CALC YA LATER_files/script.js.download"></script>
+    <script src="./scripts/calculator.js"></script>
     
 <link rel="stylesheet" type="text/css" href="chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/css/blur.css" class="loom-blur-styles"></body><loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container><loom-container id="lo-companion-container"><loom-shadow classname="resolved"></loom-shadow></loom-container></html>
