Update calculator to assigment requirements

--- a/calculator.html
+++ b/calculator.html
@@ -39,12 +39,16 @@
 }</style></head>
     <body cz-shortcut-listen="true">
       <div>
-        <h1>Manuel Castro</h1>
-        <h2>Z-23631723</h2>
+        <h1 class="my-name">Manuel Castro &copy;</h1>
+        <h2 id="znumber">Z-23631723</h2>
       </div>
         <main id="calc">
             <div id="container">
                 <div id="display">0</div>
+                <button type="button" class="operand-special sqrt" value="sqrt" data-key="149">&#8730;</button>
+                <button type="button" class="operand-special factorial" value="factorial" data-key="150">x!</button>
+                <button type="button" class="operand-special e_to_x" value="e_to_x" data-key="151">e<sup>x</sup></button>
+                <button type="button" class="operand-special log_base_10" value="log_base_10" data-key="152">log<sub>10</sub></button>
                 <button type="button" class="clear" value="clear" data-key="8">AC</button>
                 <button type="button" class="sign" value="sign" data-key="192">+/-</button>
                 <button type="button" class="percent" value="percent" data-key="80">%</button>
