Fix keyword events, add animation to keyword events and use data-key index

--- a/calculator.html
+++ b/calculator.html
@@ -45,29 +45,29 @@
         <main id="calc">
             <div id="container">
                 <div id="display">0</div>
-                <button type="button" class="operand-special sqrt" value="sqrt" data-key="149">&#8730;</button>
-                <button type="button" class="operand-special factorial" value="factorial" data-key="150">x!</button>
-                <button type="button" class="operand-special e_to_x" value="e_to_x" data-key="151">e<sup>x</sup></button>
-                <button type="button" class="operand-special log_base_10" value="log_base_10" data-key="152">log<sub>10</sub></button>
-                <button type="button" class="clear" value="clear" data-key="8">AC</button>
-                <button type="button" class="sign" value="sign" data-key="192">+/-</button>
-                <button type="button" class="percent" value="percent" data-key="80">%</button>
-                <button type="button" class="operator" value="/" data-key="68">/</button>
-                <button type="button" class="operand" value="7" data-key="55">7</button>
-                <button type="button" class="operand" value="8" data-key="56">8</button>
-                <button type="button" class="operand" value="9" data-key="57">9</button>
-                <button type="button" class="operator" value="*" data-key="88">*</button>
-                <button type="button" class="operand" value="4" data-key="52">4</button>
-                <button type="button" class="operand" value="5" data-key="53">5</button>
-                <button type="button" class="operand" value="6" data-key="54">6</button>
-                <button type="button" class="operator" value="-" data-key="173">-</button>
-                <button type="button" class="operand" value="1" data-key="49">1</button>
-                <button type="button" class="operand" value="2" data-key="50">2</button>
-                <button type="button" class="operand" value="3" data-key="51">3</button>
-                <button type="button" class="operator" value="+" data-key="61">+</button>
-                <button type="button" id="zero" class="operand" value="0" data-key="48">0</button>
-                <button type="button" class="decimal" value="." data-key="190">.</button>
-                <button type="button" class="equals" value="=" data-key="69">=</button>
+                <button type="button" class="operandSpecial sqrt" value="sqrt" data-key="s">&#8730;</button>
+                <button type="button" class="operandSpecial factorial" value="factorial" data-key="f">x!</button>
+                <button type="button" class="operandSpecial e_to_x" value="e_to_x" data-key="e">e<sup>x</sup></button>
+                <button type="button" class="operandSpecial log_base_10" value="log_base_10" data-key="l">log<sub>10</sub></button>
+                <button type="button" class="clear" value="clear" data-key="c">AC</button>
+                <button type="button" class="sign" value="sign" data-key="p">+/-</button>
+                <button type="button" class="percent" value="percent" data-key="%">%</button>
+                <button type="button" class="operator" value="/" data-key="/">/</button>
+                <button type="button" class="operand" value="7" data-key="7">7</button>
+                <button type="button" class="operand" value="8" data-key="8">8</button>
+                <button type="button" class="operand" value="9" data-key="9">9</button>
+                <button type="button" class="operator" value="*" data-key="*">*</button>
+                <button type="button" class="operand" value="4" data-key="4">4</button>
+                <button type="button" class="operand" value="5" data-key="5">5</button>
+                <button type="button" class="operand" value="6" data-key="6">6</button>
+                <button type="button" class="operator" value="-" data-key="-">-</button>
+                <button type="button" class="operand" value="1" data-key="1">1</button>
+                <button type="button" class="operand" value="2" data-key="2">2</button>
+                <button type="button" class="operand" value="3" data-key="3">3</button>
+                <button type="button" class="operator" value="+" data-key="+">+</button>
+                <button type="button" id="zero" class="operand" value="0" data-key="0">0</button>
+                <button type="button" class="decimal" value="." data-key=".">.</button>
+                <button type="button" class="equals" value="=" data-key="=">=</button>
             </div>  
         </main>
     <script src="./scripts/calculator.js"></script>
